# hiddenfb

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
docs/domain/: core.md  core.puml
hiddenfb/database/ETL/metrica/file_loader/: event.py  tracking.py
hiddenfb/database/ETL/wyscout/file_loader/: event.py
hiddenfb/database/repository/: README.md  __init__.py  cache.py
hiddenfb/domain/: match.py  player.py  team.py
hiddenfb/domain/coordinate/: __init__.py  pitch.py
hiddenfb/domain/moment/: match.py
hiddenfb/domain/moment/player/: __init__.py
hiddenfb/mappings/: README.md
hiddenfb/mappings/domain/: match.py  player.py
hiddenfb/mappings/domain/coordinates/: __init__.py
hiddenfb/mappings/domain/moment/: match.py
hiddenfb/schemas/data/metrica/: tracking.py
hiddenfb/test/: __init__.py
hiddenfb/test/domain/: match.py  player.py
hiddenfb/test/domain/coordinates/: __init__.py  pitch.py
hiddenfb/test/domain/moment/: match.py
hiddenfb/utility/: list.py
hiddenfb/utility/exception/: number.py
hiddenfb/utility/file_loader/: __init__.py  csv.py  json.py
hiddenfb/utility/schema/: __init__.py  fields.py
tests/unit/domain/coordinate/: test_coordinates_model.py  test_pitch_coordinate_model.py  test_pitch_coordinates_model.py
tests/unit/mappings/domain/: test_match_mapper.py  test_player_mapper.py
tests/unit/utility/: test_list.py
tests/unit/utility/file_loader/: test_csv_loader.py  test_file_loader.py  test_json_loader.py
tests/unit/utility/schema/: test_schema_fields.py
(+34 files in other folders)
